css/style.css
* {
    box-sizing: border-box;
}


body {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    letter-spacing: 1px;
    background: url('../img/art.png') no-repeat top center;
}

.container {
    width: 100%;
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
}

.container-fluid {
    width: 100%;
    padding-right: 0;
    padding-left: 0;
    margin-right: auto;
    margin-left: auto;
}

.img-fluid {
    max-width: 100%;
    min-height: 100%;
    object-fit: cover;
}

.align-col {
    align-items: center;
}

.spacy-x {
    padding: 0 3rem;
}

.spacy-y {
    padding: 3rem 0;
}

.custom-shadow {
    box-shadow:
        0 3.3px 2.7px rgba(0, 0, 0, -0.006),
        0 7.6px 6.9px rgba(0, 0, 0, -0.001),
        0 13.6px 14.2px rgba(0, 0, 0, 0.012),
        0 23.5px 29.2px rgba(0, 0, 0, 0.034),
        0 47px 80px rgba(0, 0, 0, 0.08);
}

nav {
    background-color: #1e1e1e;
    color: #ffffff;
    padding: 0.39rem;
}

.flex-nav {
    display: flex;
    justify-content: space-between;
}

nav ul,
header ul {
    display: flex;
    padding: 0;
}

nav ul.contact-info li span,
nav ul.social li,
header ul.join li {
    /* padding: 0 1rem; */
    text-transform: capitalize;
}

nav ul.contact-info li,
nav ul.social li,
header ul.join li {
    list-style-type: none;
}

nav ul.social li:last-of-type,
header ul.join li:last-of-type  {
    padding-right: 0;
}

header {
    padding-bottom: 0 !important;
}

header h1 {
    margin: 0;
    text-transform: uppercase;
    color: #1e1e1e;
}

header a {
    text-decoration: none;
    font-weight: 600;
}

header li#login a {
    color: #146eb4;
    font-size: 18px;
}

header li#register a {
    color: #ff9900;
    font-size: 18px;
}

nav .contact-info i {
    color: #ff9900;
}

nav .social li:hover i {
    color: #ff9900;
    cursor: pointer;
}


.grid {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-template-rows: minmax(150px, 300px);
    grid-gap: 0.3rem;
}

.g-more-row-room {
    grid-template-rows: minmax(150px, 500px);
}

.col-spacy {
    margin: 0.3rem 0;
}

.grid .col {
    /* padding: 4rem 0; */
    overflow: hidden;
}

.grid .one {
    background-color: yellowgreen;
    grid-column: 1/4;
}

.grid .two {
    background-color: navy;
    grid-column: 4/7;
}

.grid .three {
    background-color: hotpink;
    grid-column: 7/13;
}

.grid .four {
    background-color: brown;
    grid-column: 1/7;
}

.grid .five {
    background-color: forestgreen;
    grid-column: 7/10;
}

.grid .six {
    background-color: indigo;
    grid-column: 10/13;
}

/* Responsive layouts */ 


@media (min-width: 576px) {
    .container,
    .container-fluid {
        max-width: 540px;
    }
    .move-y {
        transform: translateY(0);
    }
    nav ul.contact-info li span,
    nav ul.social li,
    header ul.join li {
        padding: 0 0.69rem;
    }
}

@media (min-width: 992px) {
    .container,
    .container-fluid {
        max-width: 960px;
    }
    .move-y {
        transform: translateY(0);
    }
    nav ul.contact-info li span,
    nav ul.social li,
    header ul.join li {
        padding: 0 0.69rem;
    }
}

@media (min-width: 768px) {
    .container,
    .container-fluid {
        max-width: 720px;
    }
    .move-y {
        transform: translateY(0);
    }
    nav ul.contact-info li span,
    nav ul.social li,
    header ul.join li {
        padding: 0 0.69rem;
    }
}

@media (min-width: 1200px) {
    .container,
    .container-fluid {
        max-width: 1140px;
    }
    .move-y {
        transform: translateY(-63px);
    }
    nav ul.contact-info li span,
    nav ul.social li,
    header ul.join li {
        padding: 0 1rem;
    }
}

